# village-vote

./: .gitignore  README.md  package-lock.json  package.json
config/: sync.bat  village-vote.conf  village-vote.service
src/app/: config.js  layout.js  page.js  schema.sql
src/app/create/: CreatePoll.js  CreatePollHeader.js  ExportJSON.js  OptionInput.js  PollStateManagement.js  QuestionInput.js  SubmitPoll.js  page.js
src/app/db/: database.db  schema.sql
src/app/list/: List.js  Vote.js  page.js
src/app/vote/: List.js  Vote.js  page.js
src/components/: CreatePoll.js  CreatePollHeader.js  OptionInput.js  PollStateManagement.js  QuestionInput.js
src/db/: connection.py  create.py  data.json  database.db  init_db.py  pollList.py  schema.sql  voting.py
village-vote-backend/: .env  .env.ps1  Cargo.toml  README.md
village-vote-backend/migrations/: 20230924171652_create_polls.down.sql  20230924171652_create_polls.up.sql  20230924172223_create_question_types.down.sql  20230924172223_create_question_types.up.sql  20230924173901_create_questions.down.sql  20230924173901_create_questions.up.sql  20231028190129_create_option_types.down.sql  20231028190129_create_option_types.up.sql
village-vote-backend/src/: db.rs  main.rs
village-vote-backend/src/db/: dao.rs  mod.rs
village-vote-backend/src/model/: hhmm.rs  mod.rs  option_type.rs  options.rs  poll.rs  question.rs  timezone.rs
