[package]
name = "villate-vote-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.1", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "uuid",
] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.107"
